# trade-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  app.py  pyproject.toml  run.py  scheduler.py
.streamlit/: config.toml
data/: live_log.jsonl  track_record.jsonl
docs/: INDICATOR_VALIDATION.md  OPEN_QUESTIONS.md  STRATEGY_SPEC.md  STRATEGY_SPEC_ORIGINAL.md
scripts/: cloud_entry.sh  seed_merge.py  start.sh  stop.sh  weekly.sh
scripts/launchd/: com.tiger.start.plist  com.tiger.stop.plist  com.tiger.weekly.plist
seed_data/: live_log.jsonl  track_record.jsonl
src/tiger/: __init__.py  alarms.py  backfill.py  backtest.py  bars.py  batch.py  broker.py  data.py  entry.py  eod_report.py  indicators.py  live.py  logger.py  risk.py  scanner.py  state.py  validate.py  weekly_backtest.py
tests/: test_backtest.py  test_batch.py  test_indicators.py  test_logic.py  test_validate.py
