[project]
name = "tiger-sovereign"
version = "0.1.0"
description = "Automated intraday momentum trading bot (Tiger Sovereign strategy) for US equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "yfinance>=1.4.0",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
]
# NOTE: indicators (RSI, ADX, DI+/-, EMA, VWAP) are hand-rolled in
# src/tiger/indicators.py using Wilder's smoothing to match TradingView exactly.
# We deliberately avoid pandas-ta/ta-lib: dependency churn + their ADX/DI math
# does not reliably match TradingView, which the strategy depends on.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
